I don't believe this line of code needs a color and I keep getting this pop up for an Xcode it is annoying.

--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
 
         #homeSlideshow h2 {color: #fff;}
         #filterNav .selected {color: #fff !important;}
-        #filterNav .selected:hover {color: #fff !important;}
+        #filterNav .selected:hover {!important;}
+        <!--This xcode is annoying me -->
 
         #mainNav ul a, #mainNav ul li.sfHover ul a { color: #8f8f8f !important;	}
         #mainNav ul li.current a,
